--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/plugin/advancedFormat.js"></script>
+    <script>
+      dayjs.extend(window.dayjs_plugin_advancedFormat)
+    </script>
     <script src="./assets/script.js"></script>
 </body>
 
